--- a/prj/tests/dir_iter_test01_vs/dir_iter_test01.vcxproj.filters
+++ b/prj/tests/dir_iter_test01_vs/dir_iter_test01.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="..\..\..\src\core\diriter\directory_iterator_win.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\core\diriter\directory_iterator_unix.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
