Added new function that iterates over directories recursively

--- a/prj/tests/dir_iter_test01_c_vs/dir_iter_test01_c.vcxproj.filters
+++ b/prj/tests/dir_iter_test01_c_vs/dir_iter_test01_c.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\src\tests\main_dir_iter_test01.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\src\core\diriter\directory_iterator_win.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\core\diriter\directory_iterator_unix.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\tests\main_dir_iter_test01.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
