--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@
 !/prj/*/*_vs/*.props
 #
 !/prj/*/*_mkfl/*Makefile*
+!/prj/*/*_mkfl/raw
 #
 !/prj/*/*_mult/*Makefile
 !/prj/*/*_mult/*.sln
@@ -78,9 +79,13 @@
 !/workspaces/*_vs/*.sln
 !/workspaces/*_vs/*.vcxproj
 !/workspaces/*_vs/*.vcxproj.filters
+#
+!/workspaces/*_mkfl/*Makefile*
 
 #/scripts/test_include_sourse.sh
 
 prj/tests/googletest_mult/Makefile.googletest_getter
 
 /.private
+
+*.cpp.autosave
