--- a/workspaces/directory_iterator_all_vs/directory_iterator_all.vcxproj
+++ b/workspaces/directory_iterator_all_vs/directory_iterator_all.vcxproj
@@ -307,6 +307,16 @@
     <None Include="..\..\.gitignore" />
     <None Include="..\..\.gitmodules" />
     <None Include="..\..\LICENSE" />
+    <None Include="..\..\prj\common\common_mkfl\flagsandsys_common.unix.Makefile" />
+    <None Include="..\..\prj\common\common_mkfl\flagsandsys_common.windows.Makefile" />
+    <None Include="..\..\prj\common\common_mkfl\flagsandsys_common_private.unix.Makefile" />
+    <None Include="..\..\prj\common\common_mkfl\flagsandsys_common_private.windows.Makefile" />
+    <None Include="..\..\prj\common\common_mkfl\raw\flagsandsys_common_private_raw.unix.Makefile" />
+    <None Include="..\..\prj\common\common_mkfl\raw\flagsandsys_common_private_raw.windows.Makefile" />
+    <None Include="..\..\prj\common\common_mkfl\raw\flagsandsys_common_raw.unix.Makefile" />
+    <None Include="..\..\prj\common\common_mkfl\raw\flagsandsys_common_raw.windows.Makefile" />
+    <None Include="..\..\prj\common\common_qt\flagsandsys_common.pri" />
+    <None Include="..\..\prj\common\common_qt\flagsandsys_common_private.pri" />
     <None Include="..\..\README.md" />
   </ItemGroup>
   <ItemGroup>
