--- a/prj/tests/any_quick_test_vs/any_quick_test.vcxproj.filters
+++ b/prj/tests/any_quick_test_vs/any_quick_test.vcxproj.filters
@@ -27,7 +27,13 @@
     <ClCompile Include="..\..\..\src\tests\main_any_quick_test.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\core\simple_cpp_bcrypt_core_bcrypt.c">
+    <ClCompile Include="..\..\..\src\core\diriter\directory_iterator_cmn.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\core\diriter\directory_iterator_unix.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\core\diriter\directory_iterator_win.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
